# YT-Navigator

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  compose.yaml  docker-entrypoint.sh  manage.py  pyproject.toml
app/: __init__.py  admin.py  apps.py  context_processors.py  helpers.py  urls.py
app/forms/: __init__.py  registration.py
app/models/: __init__.py  channel.py  user.py  video.py  video_chunk.py
app/schemas/: __init__.py  agent.py  tools.py  vectorstore.py
app/services/agent/: __init__.py  main_graph.py  prompts.py  react_graph.py
app/services/chunks_reranker/: __init__.py  config.py  model_manager.py  reranker.py
app/services/evaluation/: __init__.py  langsmith_evaluation_service.py  mongodb_eval_db.py
app/services/scraping/: __init__.py  base.py  channel.py  transcript.py  utils.py  video.py  youtube_scraper.py
app/services/vector_database/: __init__.py  base.py  retriever.py  utils.py
app/services/vector_database/tools/: __init__.py  sql_tool.py  vector_tool.py
app/templates/: base.html  chatbot.html  home.html  profile.html  query.html
app/templates/errors/: 404.html  500.html
app/templates/registration/: base.html  login.html  register.html
app/views/: __init__.py  authentication.py  chatbot.py  home.py  profile.py  query.py  scan.py
yt_navigator/: __init__.py  asgi.py  settings.py  urls.py  views.py  wsgi.py
yt_navigator/middlewares/: __init__.py  request_logging_middleware.py
yt_navigator/utils/: __init__.py  logging.py
